--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   }
 
 .card-body {
-    margin-top: 50px;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -24,16 +24,16 @@ body {
 
 #quote_text {
     font-family: 'Shadows Into Light', cursive;
-    font-size: x-large;
+    font-size: 25px;
+    padding-right: 50px;
+    padding-left: 50px;
 }
 
 .card-text-by {
     padding-top: 0;
-    margin-bottom: 2rem;
+    margin-bottom: 20px;
     font-family: 'Dancing Script', cursive;
-    font-size: larger;
+    font-size: 20px;
     color: grey;
 }
-
-
 
